# ball-beam

./: .gitignore  .gitmodules  Dockerfile  README.md
src/: voltage_to_distance_ir.txt
src/ball_beam_matlab/: ball_beam_sim.slx  ball_beam_sim.slxc  parameters_definition.m
src/ball_beam_matlab/slprj/sim/varcache/ball_beam_sim/: checksumOfCache.mat  varInfo.mat
src/ball_beam_matlab/slprj/sim/varcache/ball_beam_sim/tmwinternal/: simulink_cache.xml
src/ball_beam_msgs/: CMakeLists.txt  package.xml
src/ball_beam_msgs/msg/: InRunMonitor.msg  StepData.msg
src/ball_beam_msgs/srv/: InRunControl.srv  PotentiometerCalibration.srv  TriggerServo.srv  TriggerStep.srv  UpdatePID.srv
src/esp32_control/: esp32_control.ino  monitor_ball_beam.perspective
src/ir_calibration/: data.csv  fit.txt  fit_data_poly.m  ir_calibration.ino
src/ir_calibration/test/: test.ino
src/pot_calibration/: package.xml  pot_calibration.ino  setup.cfg  setup.py
src/pot_calibration/calibration/: current_calibration.txt
src/pot_calibration/pot_calibration/: __init__.py  client_pot.py  redo_with_points.py
src/run_control/: CMakeLists.txt  a.perspective  monitor_ball_beam.perspective  package.xml  run_control.ino
src/run_control/src/: in_run_head.cpp
src/servo_beam_step/: package.xml  servo_step.ino  setup.cfg  setup.py
src/servo_beam_step/data/: 2024-04-05_-30_dg.csv  2024-04-05_-40_dg.csv  2024-04-05_30_dg.csv  2024-04-05_40_dg.csv
src/servo_beam_step/servo_beam_step/: __init__.py  step_ros.py
src/test/: test.ino
utils/: Dockerfile  build-ball-beam.sh  run-ball-beam-dev.sh  run-ball-beam.sh
utils/build_scripts/: .bashrc_ex  Dockerfile  build-esp-firmware.sh  build-microros-msg.sh  build-ros2-code.sh  full-build.sh  set-build-env.sh
